<?xml version="1.0"?>
<package>
    <name>ros_robot_wandering_demo</name>
    <version>0.0.1</version>
    <description>
	A simple demo that uses 2D laser scan as sensor to wander avoiding obstacles
    </description>

    <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer> 
    <maintainer email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</maintainer>


    <license>LGPLv3</license>

    <url type="repository">https://github.com/officinerobotiche/robot_wandering_demo_ros</url>

    <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>
    <author email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</author>
    
    <buildtool_depend>catkin</buildtool_depend>
  
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>roscpp</run_depend>

</package>
